# photo-processor

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
config/: default.yaml
src/stock_processor/: __init__.py  cli.py  config.py  exporter.py  face_blur.py  image_processor.py  logo_remover.py  metadata.py  pipeline.py  raw_handler.py
tests/: __init__.py
